--- a/backtweet/tweet/templates/index.html
+++ b/backtweet/tweet/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    test template
-</body>
-</html>
+{% extends "layout.html" %}
+{% block title %}
+Tweeeeeeettttttt
+{% endblock %}
+
+{% block content %}
+<h1 class="text-center text-white">Welcome to Backtweet</h1>
+{%endblock%}
